--- a/images/calico/configs/latest.kube-controllers.apko.yaml
+++ b/images/calico/configs/latest.kube-controllers.apko.yaml
@@ -1,7 +1,6 @@
 contents:
   packages:
-    - calico-node
-    - busybox
+    - calico-kube-controllers
 
 accounts:
   groups:
@@ -11,27 +10,15 @@ accounts:
     - username: nonroot
       uid: 65532
       gid: 65532
-  # calico-node is responsible for many host level networking tasks and as such, needs root
-  run-as: 0
-
-environment:
-  # Tell sv where to find the services
-  SVDIR: /etc/service/enabled
+  run-as: 65532
 
 paths:
-  - path: /etc/service/available
+  - path: /status
     type: directory
-    uid: 0
-    gid: 0
-    permissions: 0o755
-  - path: /etc/calico
-    type: directory
-    uid: 65532
-    gid: 65532
-    permissions: 0o755
+    permissions: 0o777
 
 entrypoint:
-  command: /usr/sbin/start_runit
+  command: /usr/bin/calico-kube-controllers
 
 annotations:
   "org.opencontainers.image.authors": "Chainguard Team https://www.chainguard.dev/"
